--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,11 +1,12 @@
 .row {
+
   @mixin clearfix;
 
   &--gutters {
     margin-right: -65px;
   }
 
-  &--gutter-large {
+  &--gutters-large {
     margin-right: -100px;
   }
 
@@ -20,30 +21,35 @@
   &__b-margin-until-medium {
     margin-bottom: 1rem;
   }
-@mixin atMedium {
-  &__b-margin-until-medium {
-    margin-bottom: 0;
-  }
-  &__medium-4 {
-    float: left;
-    width: 33.33%;
-  }
-  &__medium-4--larger {
-    width: 37%;
-  }
 
-  &__medium-6 {
-    float: left;
-    width: 50%;
-  }
+  @mixin atMedium {
 
-  &__medium-8 {
-    float: left;
-    width: 66.66%;
+    &__b-margin-until-medium {
+      margin-bottom: 0;
+    }
+
+    &__medium-4 {
+      float: left;
+      width: 33.33%;
+    }
+
+    &__medium-4--larger {
+      width: 37%;
+    }
+
+    &__medium-6 {
+      float: left;
+      width: 50%;
+    }
+
+    &__medium-8 {
+      float: left;
+      width: 66.66%;
+    }
+
+    &__medium-8--smaller {
+      width: 63%;
+    }
   }
-  &__medium-8--smaller {
-    width: 63%;
-  }
-}
 
 }
