Added browser support fallbacks.

--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,9 +1,10 @@
 .page-section {
   padding: 1.2rem 0;
+
   @mixin atMedium {
     padding: 4.5rem 0;
   }
-
+  
   &--no-b-padding-until-medium {
     padding-bottom: 0;
 
@@ -22,8 +23,9 @@
 
   &--blue {
     background-color: $mainBlue;
-    color: #fff;
+    color: #FFF;
   }
+
   &--testimonials {
     background-color: #e0e6ef;
 
@@ -34,4 +36,5 @@
       }
     }
   }
+
 }
