--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -1,6 +1,6 @@
 .btn {
   background-color: $mainBlue;
-  color: #fff;
+  color: #FFF;
   text-decoration: none;
   padding: .75rem 1.2rem;
   display: inline-block;
@@ -8,6 +8,7 @@
   &--orange {
     background-color: $mainOrange;
   }
+
   &--large {
     padding: 1.1rem 1.9rem;
 
@@ -15,4 +16,5 @@
       font-size: 1.25rem;
     }
   }
+
 }
