--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -19,16 +19,19 @@
       padding-top: 60px;
     }
   }
+
   &__title {
     font-weight: 300;
     color: $mainBlue;
     margin: 0;
     font-size: 2.4rem;
-
+  
     @mixin atSmall {
       font-size: 4.8rem;
     }
+
   }
+
   &__subtitle {
     font-weight: 300;
     color: $mainBlue;
@@ -38,9 +41,11 @@
     @mixin atSmall {
       font-size: 2.9rem;
     }
+
   }
+
   &__description {
-    color: #fff;
+    color: #FFF;
     font-size: 1.1rem;
     font-weight: 100;
     text-shadow: 2px 2px 0 rgba(0, 0, 0, .1);
@@ -52,4 +57,5 @@
       font-size: 1.875rem;
     }
   }
+
 }
