--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -62,6 +62,7 @@
     &__medium-8--smaller {
       width: 63%;
     }
+
   }
 
   @mixin atLarge {
@@ -92,26 +93,32 @@
     &__large-8--smaller {
       width: 63%;
     }
-  }
 
+  }
+  
   /* Begin Equal Height Rules */
-  &--equal-height-at-medium {
+  .flexbox &--equal-height-at-medium {
     @mixin atMedium {
       display: flex;
     }
+
     & > div {
       float: none;
       display: flex;
     }
+
   }
 
-  &--equal-height-at-large {
+  .flexbox &--equal-height-at-large {
     @mixin atLarge {
       display: flex;
     }
+
     & > div {
       float: none;
       display: flex;
     }
+
   }
+
 }
