--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -13,7 +13,7 @@
   }
 
   &__photo {
-    border-radius: 50%;
+    border-radius: 80px;
     overflow: hidden;
     width: 160px;
     height: 160px;
@@ -34,8 +34,8 @@
   &__subtitle {
     color: $mainOrange;
     text-align: center;
-    font-size: .9375rem;
     font-weight: 400;
+    font-size: 0.9375rem;
     margin: .25rem 0 1rem 0;
   }
 }
